--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5moPuwUXGCTEhc48u+mXr",
+      "authorship_tag": "ABX9TyMOAhATTDOCTejbD4bWwnVx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -265,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": null,
       "metadata": {
         "id": "ZcCNhdHM_4K_"
       },
@@ -324,7 +324,7 @@
         "id": "w0ux86UfDkJD",
         "outputId": "5c333903-7da8-442a-f76a-7ab5c74f4fea"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -734,7 +734,7 @@
         "id": "swUMxE7mEatR",
         "outputId": "3ebee259-4da7-4673-ebcd-8b3e10c2d226"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,7 +777,7 @@
         "id": "BV_nDzupQt7W",
         "outputId": "5db9d885-d355-4a27-b03c-f7106d03ead5"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -816,7 +816,7 @@
         "id": "TxU-xewjhH1n",
         "outputId": "0e0cf0d6-5ed9-4a07-9a54-710e4039e932"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1233,7 +1233,7 @@
         "id": "6xnagbRzrBow",
         "outputId": "479469b3-b881-4a41-edb0-f5a88ccfcad5"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1280,7 +1280,7 @@
         "id": "Uri8fSIReBF5",
         "outputId": "e3f73905-ea84-443a-f0e1-7b7957500c3f"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1628,7 +1628,7 @@
         "id": "MgXKUH8bZWsJ",
         "outputId": "1bfe97ff-3e14-49ea-8ad3-4ab488216ea4"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1666,7 +1666,7 @@
         "id": "3SSmPIEqcFo4",
         "outputId": "4bdc0395-a70d-44e9-ff98-7b2d62ddd5e0"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2195,7 +2195,7 @@
         },
         "outputId": "1df096fb-4efb-4fa2-fa24-e3bb95f54281"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2251,7 +2251,7 @@
         "id": "IjYghh0TRF7_",
         "outputId": "f34f14bc-927a-4f10-a82c-47fbbb8ede06"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2309,7 +2309,7 @@
         "id": "UKkZQpB5P-cL",
         "outputId": "28e82e30-5b3a-4717-e392-bcbd32ca1a2f"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2344,7 +2344,7 @@
         "id": "8TO2zxDHnzAX",
         "outputId": "7237cd52-d818-45d8-9c06-a1aaf8f43028"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2456,7 +2456,7 @@
       "metadata": {
         "id": "RfEBwD9rIDfr"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2500,7 +2500,7 @@
         "id": "NdGWYa8UH9k7",
         "outputId": "65c7cf42-88f5-4a2c-8736-306b98eb245c"
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2534,7 +2534,7 @@
         "id": "Va6xaZdgR4iy",
         "outputId": "f3718407-3dd8-4641-b57b-58debd24774a"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2563,7 +2563,7 @@
         "id": "NUmzoAa2T-4R",
         "outputId": "68ecf18a-6d39-480b-f3c8-c093b35734b0"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2937,7 +2937,7 @@
         "id": "XMyRtUPf4_cx",
         "outputId": "848f7920-5f2e-495a-de74-4eb0b67d561c"
       },
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2979,7 +2979,7 @@
         "id": "PqJQCefcbsOj",
         "outputId": "2a9750b5-84a1-475a-f6a4-0a32c9cec5f0"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3026,7 +3026,7 @@
         "id": "zMzZhYHzcCiM",
         "outputId": "76fc8d0f-e095-47e5-bda4-5dc593474433"
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3336,7 +3336,7 @@
         "id": "dgAkeSktpnwa",
         "outputId": "5cc0fff8-85f7-4970-d8fe-4e523cca9cba"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3741,7 +3741,7 @@
         "id": "PKVVI67RovX9",
         "outputId": "16ce743e-cb1d-41a4-c48e-dcd1fb20f2f5"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4050,7 +4050,7 @@
         "id": "SpIPmiM1rZuB",
         "outputId": "98719d5f-fa79-4fe1-9183-c191a62d3af9"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4127,7 +4127,7 @@
         "id": "CrXEGBnULZkJ",
         "outputId": "eafae531-af93-4493-9eb2-29f984d00b4c"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4196,7 +4196,7 @@
         "id": "YXApukP0Mweo",
         "outputId": "34ba6b9a-c243-4fd8-a9f2-f2ab47c21a61"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4306,7 +4306,7 @@
       "metadata": {
         "id": "USpGFhwqUyGV"
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4324,7 +4324,7 @@
         "id": "h6dovbVwQeT5",
         "outputId": "47832dd8-7dff-4508-d55d-21cb8c907a35"
       },
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4772,7 +4772,7 @@
         "id": "NFTcLMxmVA4v",
         "outputId": "e5ea34eb-a9b4-4863-80f7-c0cc5a557d77"
       },
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5235,7 +5235,7 @@
         "id": "CRlWyhe7Zjed",
         "outputId": "07242e78-da24-42bf-e59d-b1aa23bbb6ca"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5279,7 +5279,7 @@
         "id": "lbWq_gXNa7qN",
         "outputId": "0e5786fa-7c44-41a9-d9e5-3b2359793fa7"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5306,7 +5306,7 @@
         "id": "7Zfje52sawZP",
         "outputId": "6a658218-2334-45e0-961d-2288ef08ef95"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5380,7 +5380,7 @@
         "id": "-biDo45QmMb8",
         "outputId": "68479b76-fc8f-48a0-8d4a-2e6032b765a4"
       },
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5437,7 +5437,7 @@
         "id": "bHi20NVoY4am",
         "outputId": "15c48133-aa01-4911-fbe2-e582414f0299"
       },
-      "execution_count": 228,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5863,6 +5863,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Antes de detectar outliers se analizan los datos para identificar valores física/químicamente imposibles o alejados de los valores aceptables; es decir, valores que puedan ser incorrectos o incosistentes con el dominio del problema (anormales). Para ello se relevan los datos tolerables extremos que serán utilizados como límites para los valores de las distintas variables."
+      ],
+      "metadata": {
+        "id": "SH656IlxaaRY"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Se identifican los valores tolerables 'extremos' de cada variable.\n",
@@ -5888,7 +5897,7 @@
         "id": "VKlPgqIMGa08",
         "outputId": "e2b329d6-b2ab-49ba-f1da-ef0c3f95384b"
       },
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6334,7 +6343,7 @@
           "height": 290
         }
       },
-      "execution_count": 160,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6786,7 +6795,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6812,7 +6821,7 @@
           "height": 300
         }
       },
-      "execution_count": 162,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7259,7 +7268,7 @@
         "id": "Fy2AWDR2nBfx",
         "outputId": "21f1e122-8228-49b0-cbf7-a9ae6ffd6f07"
       },
-      "execution_count": 163,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7700,7 +7709,7 @@
       "metadata": {
         "id": "-eK9a7KVOxLl"
       },
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7724,7 +7733,7 @@
         "id": "CVE56u1HbjF1",
         "outputId": "a33fd5bb-4fe6-4c6f-f4ab-63342ec72c54"
       },
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8119,7 +8128,7 @@
         "id": "1HuEbJTQWuKN",
         "outputId": "37828484-4f88-4d35-c778-b0fb0c975eac"
       },
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8141,6 +8150,19 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Una vez removidos los valores anómalos, se procede a identificar valores outliers mediante técnicas como:\n",
+        "* Métodos estadísticos como la Regla Empírica (68-95-99.7). Funciona bastante bien para distribuciones normales o muy cercanas a la normal.\n",
+        "* Métodos estadísticos como las Medidas de tendencia central y dispersión. Aunque este método no tiene en cuenta la asimetría de la distribución.\n",
+        "* Rango Intercuartílico, mediante el suo del diagrama de caja (boxplot).\n",
+        "* MAD (Median Absolute Deviation), ideal en el caso de distribuciones asimétricas."
+      ],
+      "metadata": {
+        "id": "HFWQLHKsbNB5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#print(\"Dimensiones del dataset antes de la remoción de outliers: \", df.shape)\n",
@@ -8153,7 +8175,7 @@
       "metadata": {
         "id": "bvLAKOIiKw9r"
       },
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8189,7 +8211,7 @@
         "id": "dwjd0MAQr_gp",
         "outputId": "46f6c8ed-af58-4689-df62-9b46141eb2c3"
       },
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8329,7 +8351,7 @@
         "id": "G6l0fKiiqX6P",
         "outputId": "464be052-3707-4e15-ddc0-8b1c3b315ef1"
       },
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8667,7 +8689,7 @@
         "id": "9GDDofWlmmp-",
         "outputId": "2e9dd1d9-29f5-4ab9-ee02-ae7b6064057d"
       },
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9473,7 +9495,7 @@
         "id": "UXsaOVKrilKE",
         "outputId": "12796b2d-186a-4d00-9bd1-56831a3922d6"
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9508,7 +9530,7 @@
         "id": "5T15bNVbHvw2",
         "outputId": "d4acb9bd-ee62-4522-b389-dace85b255ef"
       },
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9577,7 +9599,7 @@
         "id": "mqikp92cQqln",
         "outputId": "782d78f9-7de2-4c41-f928-912230e905ef"
       },
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9622,7 +9644,7 @@
         "id": "7m91ejFVFXlW",
         "outputId": "41566b2d-1eb6-436f-8377-fc762d4c8334"
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9663,7 +9685,7 @@
         "id": "M7gOkjGC71s_",
         "outputId": "4bbd8459-1df8-4be2-a717-0481cc1398d3"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9835,7 +9857,7 @@
         "id": "1dzFMpHy-9Gz",
         "outputId": "8193734f-fbbe-456b-f2fc-00408e46b0c8"
       },
-      "execution_count": 179,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9879,7 +9901,7 @@
         "id": "k-NAqngHM-wJ",
         "outputId": "751d4af8-28b7-4990-8c31-7da19ad04646"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9928,7 +9950,7 @@
         "id": "yTLth9vpQw3L",
         "outputId": "e5f37af2-dedc-4954-d995-c4608d881d60"
       },
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9994,7 +10016,7 @@
         "id": "n48_QdmLTBoK",
         "outputId": "9cf7cdd5-0ae0-411f-b051-8182c23a9e06"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10049,7 +10071,7 @@
       "metadata": {
         "id": "GV39GFDfOjUf"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10079,7 +10101,7 @@
         "id": "-Cf2HyWB7IlA",
         "outputId": "2d002f2d-350e-426c-b984-57b98eb07e62"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10135,7 +10157,7 @@
         "id": "K0dFBV8NQ3zA",
         "outputId": "0b3c3586-58c3-4152-b5aa-c30496212efa"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -10241,7 +10263,7 @@
       "metadata": {
         "id": "UP5gsDnMLN-A"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10284,7 +10306,7 @@
         "id": "kre9wYCNk7af",
         "outputId": "b69eb9f8-f4cf-4745-e504-3df05eb94a29"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10647,7 +10669,7 @@
         "id": "_FrnJkeDBN-0",
         "outputId": "eb3e9349-13ef-441f-883c-f93ea3793a33"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11589,7 +11611,7 @@
         "id": "GjP9bwqMB6pf",
         "outputId": "00e6d1b1-78fb-48a0-9d98-c54c468030f0"
       },
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11623,7 +11645,7 @@
         "id": "IJ5ent0nCT0M",
         "outputId": "fb99ebaf-b5fc-42bc-8dc9-4a5390911ece"
       },
-      "execution_count": 158,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11664,7 +11686,7 @@
         "id": "54vMT6I1rlUU",
         "outputId": "f3308046-fffd-498d-a067-bde2133061cd"
       },
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12337,7 +12359,7 @@
         },
         "outputId": "503751df-a5f9-4080-cc41-54ba0b7e2f27"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12366,7 +12388,7 @@
         "id": "8TlDXGADsAUp",
         "outputId": "33ab07e0-5ad4-45fe-c437-434f1bdab062"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12458,7 +12480,7 @@
         "id": "AwugsXJSHvDx",
         "outputId": "b007e1f5-d47c-4b18-cda5-83a18e512dbf"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
