--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmQgr4p2oLesSXcCu4gsf+",
+      "authorship_tag": "ABX9TyOrmvJvddG9gAmLOvALrMG1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11213,25 +11213,9 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "#print(\"Dimensiones del dataset antes de la remoción de outliers: \", df.shape)\n",
-        "#outliers = pd.concat([df_white_outliers, df_red_outliers])\n",
-        "#outlier_indices = outliers.index\n",
-        "#df = df.drop(outlier_indices)\n",
-        "#df = df.reset_index(drop=True)\n",
-        "#print(\"Dimensiones del dataset luego de la remoción de outliers: \", df.shape)"
-      ],
-      "metadata": {
-        "id": "bvLAKOIiKw9r"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "Mediante **boxplots** se analizan de manera gráfica y rápida los valores extremos de cada variable (numérica contínua)."
+        "Luego, mediante **BOXPLOTS** se analizan de manera gráfica y rápida los valores extremos de cada variable (numérica contínua)."
       ],
       "metadata": {
         "id": "wuk8c-mmCiDB"
@@ -11380,7 +11364,9 @@
       "source": [
         "💡 INSIGHTS\n",
         "\n",
-        "Si bien existen outliers para las variables bajo estudio, en general, los mismos se encuentran dentro del dominio esperado a excepción de los outliers asociados a los niveles de azufre que están por encima del valor máximo admisible. No obstante, según las averiguaciones realizadas los niveles de dióxido de azufre en vinos blancos europeos suelen estar por debajo de 250 partes por millón (ppm)."
+        "Si bien a simple vista pareciera que existen outliers para las variables bajo estudio, en general, estos valores se encuentran dentro del dominio esperado a excepción de los outliers asociados a los niveles de azufre que están por encima del valor máximo admisible.\n",
+        "\n",
+        "Según las averiguaciones realizadas los niveles de dióxido de azufre en vinos blancos europeos suelen estar por debajo de 250 partes por millón (ppm)."
       ],
       "metadata": {
         "id": "Lx3Ht2Z1vo66"
@@ -12591,6 +12577,22 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#print(\"Dimensiones del dataset antes de la remoción de outliers: \", df.shape)\n",
+        "#outliers = pd.concat([df_white_outliers, df_red_outliers])\n",
+        "#outlier_indices = outliers.index\n",
+        "#df = df.drop(outlier_indices)\n",
+        "#df = df.reset_index(drop=True)\n",
+        "#print(\"Dimensiones del dataset luego de la remoción de outliers: \", df.shape)"
+      ],
+      "metadata": {
+        "id": "bvLAKOIiKw9r"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
