--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrmvJvddG9gAmLOvALrMG1",
+      "authorship_tag": "ABX9TyPQ8ytKxRC4qUxb9w/bC1Vu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12575,6 +12575,141 @@
             "Dimensiones del dataset antes de la remoción de outliers:  (5329, 15)\n",
             "Dimensiones del dataset luego de la remoción de outliers:  (5307, 15)\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**MAD (Median Absolute Deviation)**\n",
+        "\n",
+        "Analizaremos el caso de la variable 'residual sugar' en vinos blancos mediantes el método de las desvuacuines absolutas medianas."
+      ],
+      "metadata": {
+        "id": "hmLRAm_jpglQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculo de las desviaciones absolutas medianas\n",
+        "variable = 'residual sugar'\n",
+        "median = np.median(df_white[variable])\n",
+        "mad = np.median(np.abs(df_white[variable] - median))\n",
+        "\n",
+        "# Se defune el umbral para los outliers (por lo general entre 2,5 hasta 3,5)\n",
+        "threshold = 3\n",
+        "\n",
+        "# Detección de outliers\n",
+        "outliersMAD = df_white[variable][np.abs(df_white[variable] - median) / mad > threshold]\n",
+        "\n",
+        "#veamos los resultados finales\n",
+        "#print(\"Outliers detectados por el Método de las Desviaciones Absolutas Medianas (MAD):\")\n",
+        "#print(outliers)\n",
+        "outliersMAD"
+      ],
+      "metadata": {
+        "id": "HDHRVhSTp1h1",
+        "outputId": "3ec1bfb3-0591-48f4-b17e-61f14b1b2940",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 458
+        }
+      },
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       20.70\n",
+              "14      19.25\n",
+              "34      14.95\n",
+              "38      17.95\n",
+              "81      16.00\n",
+              "        ...  \n",
+              "4691    19.25\n",
+              "4748    18.35\n",
+              "4749    18.40\n",
+              "4778    19.40\n",
+              "4798    14.50\n",
+              "Name: residual sugar, Length: 279, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>residual sugar</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>20.70</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>19.25</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>34</th>\n",
+              "      <td>14.95</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>38</th>\n",
+              "      <td>17.95</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>81</th>\n",
+              "      <td>16.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4691</th>\n",
+              "      <td>19.25</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4748</th>\n",
+              "      <td>18.35</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4749</th>\n",
+              "      <td>18.40</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4778</th>\n",
+              "      <td>19.40</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4798</th>\n",
+              "      <td>14.50</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>279 rows × 1 columns</p>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 125
         }
       ]
     },
