--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQ8ytKxRC4qUxb9w/bC1Vu",
+      "authorship_tag": "ABX9TyMphUek1cbdoNmF6CZOI6a0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12606,34 +12606,31 @@
         "#veamos los resultados finales\n",
         "#print(\"Outliers detectados por el Método de las Desviaciones Absolutas Medianas (MAD):\")\n",
         "#print(outliers)\n",
-        "outliersMAD"
+        "outliersMAD.describe().round(3)"
       ],
       "metadata": {
-        "id": "HDHRVhSTp1h1",
-        "outputId": "3ec1bfb3-0591-48f4-b17e-61f14b1b2940",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 458
-        }
+          "height": 335
+        },
+        "id": "HDHRVhSTp1h1",
+        "outputId": "c2c09bfa-515e-4949-f21e-426a7d3c1f98"
       },
-      "execution_count": 125,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0       20.70\n",
-              "14      19.25\n",
-              "34      14.95\n",
-              "38      17.95\n",
-              "81      16.00\n",
-              "        ...  \n",
-              "4691    19.25\n",
-              "4748    18.35\n",
-              "4749    18.40\n",
-              "4778    19.40\n",
-              "4798    14.50\n",
-              "Name: residual sugar, Length: 279, dtype: float64"
+              "count    279.000\n",
+              "mean      16.818\n",
+              "std        3.599\n",
+              "min       14.300\n",
+              "25%       15.050\n",
+              "50%       16.200\n",
+              "75%       17.800\n",
+              "max       65.800\n",
+              "Name: residual sugar, dtype: float64"
             ],
             "text/html": [
               "<div>\n",
@@ -12659,57 +12656,140 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>20.70</td>\n",
+              "      <th>count</th>\n",
+              "      <td>279.000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>19.25</td>\n",
+              "      <th>mean</th>\n",
+              "      <td>16.818</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>34</th>\n",
-              "      <td>14.95</td>\n",
+              "      <th>std</th>\n",
+              "      <td>3.599</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>38</th>\n",
-              "      <td>17.95</td>\n",
+              "      <th>min</th>\n",
+              "      <td>14.300</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>81</th>\n",
-              "      <td>16.00</td>\n",
+              "      <th>25%</th>\n",
+              "      <td>15.050</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
+              "      <th>50%</th>\n",
+              "      <td>16.200</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4691</th>\n",
-              "      <td>19.25</td>\n",
+              "      <th>75%</th>\n",
+              "      <td>17.800</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4748</th>\n",
-              "      <td>18.35</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4749</th>\n",
-              "      <td>18.40</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4778</th>\n",
-              "      <td>19.40</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4798</th>\n",
-              "      <td>14.50</td>\n",
+              "      <th>max</th>\n",
+              "      <td>65.800</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>279 rows × 1 columns</p>\n",
               "</div><br><label><b>dtype:</b> float64</label>"
             ]
           },
           "metadata": {},
-          "execution_count": 125
+          "execution_count": 126
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "outliersMAD[outliersMAD > 45]"
+      ],
+      "metadata": {
+        "id": "P0fIyanjrQDA",
+        "outputId": "7cbfc943-2350-4f8d-eeef-245438e952bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 115
+        }
+      },
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2781    65.8\n",
+              "Name: residual sugar, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>residual sugar</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2781</th>\n",
+              "      <td>65.8</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 128
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Sólo hay un registro correspondiente a vino blanco con un valor de \"residual sugar\" superior a 45 (valor extremo superior). Éste registro se elimina del dataset."
+      ],
+      "metadata": {
+        "id": "w10ax5K8rieF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Dimensiones del dataset antes de la remoción de outliers: \", df.shape)\n",
+        "df_filtered = df[df['residual sugar'] > 45]\n",
+        "df = df.drop(df_filtered.index)\n",
+        "df = df.reset_index(drop=True)\n",
+        "print(\"Dimensiones del dataset luego de la remoción de outliers: \", df.shape)"
+      ],
+      "metadata": {
+        "id": "I1v1aZkOryfS",
+        "outputId": "9adc7ba5-53ff-4f1b-bc10-60c20b3ef4c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dimensiones del dataset antes de la remoción de outliers:  (5313, 15)\n",
+            "Dimensiones del dataset luego de la remoción de outliers:  (5312, 15)\n"
+          ]
         }
       ]
     },
