--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMphUek1cbdoNmF6CZOI6a0",
+      "authorship_tag": "ABX9TyPUNToCPD62kdmBbq3qSSZ3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,11 +92,9 @@
         "          <li>Imputación de Valores Faltantes</li>\n",
         "          <li>Detección y Manejo de Valores Sospechosos</li>\n",
         "          <li>Identificación de la Cardinalidad de las Variables</li>\n",
-        "          <li>Manejo de Datos Desbalanceados 🔴</li>\n",
         "          <li>Feature Engineering (Generación de Nuevas Características) 🟡</li>\n",
         "          <li>Transformación de Datos (Normalización) 🔴</li>\n",
         "          <li>Feature Binning (Agrupación de Características)</li>\n",
-        "          <li>Reducción de Dimensionalidad 🔴</li>\n",
         "        </ul>\n",
         "      </li>\n",
         "    </ul>\n",
@@ -106,7 +104,7 @@
         "        <li>Análisis Univariado</li>\n",
         "          <ul>\n",
         "            <li>Análisis Estadístico</li>\n",
-        "            <li>Análisis de Distribución de las Variables 🟡</li>\n",
+        "            <li>Análisis de Distribución de las Variables</li>\n",
         "            <li>Detección y Manejo de Outliers</li>\n",
         "          </ul>\n",
         "        <li>Análisis Bivariado</li>\n",
@@ -12703,12 +12701,12 @@
         "outliersMAD[outliersMAD > 45]"
       ],
       "metadata": {
-        "id": "P0fIyanjrQDA",
-        "outputId": "7cbfc943-2350-4f8d-eeef-245438e952bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 115
-        }
+        },
+        "id": "P0fIyanjrQDA",
+        "outputId": "7cbfc943-2350-4f8d-eeef-245438e952bb"
       },
       "execution_count": 128,
       "outputs": [
@@ -12775,19 +12773,19 @@
         "print(\"Dimensiones del dataset luego de la remoción de outliers: \", df.shape)"
       ],
       "metadata": {
-        "id": "I1v1aZkOryfS",
-        "outputId": "9adc7ba5-53ff-4f1b-bc10-60c20b3ef4c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "I1v1aZkOryfS",
+        "outputId": "2dd2006b-bd66-468f-db44-145a1d745abf"
       },
-      "execution_count": 131,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Dimensiones del dataset antes de la remoción de outliers:  (5313, 15)\n",
+            "Dimensiones del dataset antes de la remoción de outliers:  (5312, 15)\n",
             "Dimensiones del dataset luego de la remoción de outliers:  (5312, 15)\n"
           ]
         }
